--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="description"
         content="KINETC: Koopman-Inspired Nonlinear Event-Triggered Control from Data">
-  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+  <meta name="keywords" content="Koopman operator, event-triggered control, lifting linear predictors, data-driven control.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nerfies: Deformable Neural Radiance Fields</title>
+  <title>KINETC: Koopman-Inspired Nonlinear Event-Triggered Control from Data</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -90,30 +90,29 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">KINETC: Koopman-Inspired Nonlinear Event-Triggered Control from Data</h1>
           <div class="is-size-5 publication-authors">
+            <!-- Updated Author Names -->
             <span class="author-block">
-              <a href="https://keunhong.com">Keunhong Park</a><sup>1</sup>,</span>
+              Zeyad M. Manaa
+            </span>,
             <span class="author-block">
-              <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup>,</span>
+              Ayman M. Abdallah
+            </span>,
             <span class="author-block">
-              <a href="https://jonbarron.info">Jonathan T. Barron</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="http://sofienbouaziz.com">Sofien Bouaziz</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://www.danbgoldman.com">Dan B Goldman</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~seitz/">Steven M. Seitz</a><sup>1,2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="http://www.ricardomartinbrualla.com">Ricardo Martin-Brualla</a><sup>2</sup>
+              Sami El-Ferik
             </span>
           </div>
 
-          <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>University of Washington,</span>
-            <span class="author-block"><sup>2</sup>Google Research</span>
+          <!-- Acknowledgments -->
+          <div class="is-size-6 publication-acknowledgments">
+            <p>
+              This work was supported by the Interdisciplinary Research Center for Aviation and Space Exploration (IRC-ASE) at King Fahd University of Petroleum and Minerals under research project/grant INAE2401.
+            </p>
+            <p>
+              Z. M. Manaa and A. M. Abdallah are with the Interdisciplinary Research Center for Aviation and Space Exploration (IRC-ASE) and the Department of Aerospace Engineering at King Fahd University for Petroleum and Minerals, Dhahran, 31261, Saudi Arabia.
+            </p>
+            <p>
+              S. El-Ferik is with the Research Center for Smart Mobility and Logistics, and the Control and Instrumentation Engineering Department, King Fahd University of Petroleum & Minerals Dhahran, 31261, Saudi Arabia.
+            </p>
           </div>
 
           <div class="column has-text-centered">
@@ -147,15 +146,24 @@
                   <span>Video</span>
                 </a>
               </span>
-              <!-- Code Link. -->
+              <!-- Code Link Placeholder -->
               <span class="link-block">
+                <!--
                 <a href="https://github.com/google/nerfies"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
-                  </a>
+                </a>
+                -->
+                <!-- Placeholder Message -->
+                <a href="#" class="button is-normal is-rounded is-dark" disabled>
+                  <span class="icon">
+                      <i class="fas fa-code"></i>
+                  </span>
+                  <span>Code Available After Review Completion</span>
+                </a>
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
@@ -165,7 +173,8 @@
                       <i class="far fa-images"></i>
                   </span>
                   <span>Data</span>
-                  </a>
+                </a>
+              </span>
             </div>
 
           </div>
@@ -183,9 +192,7 @@
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">Nerfies</span> turns selfie videos from your phone into
-        free-viewpoint
-        portraits.
+        <span class="dnerf">KINETC</span> enables advanced control from data-driven models.
       </h2>
     </div>
   </div>
@@ -196,6 +203,7 @@
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
+        <!-- Carousel Items -->
         <div class="item item-steve">
           <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/steve.mp4"
@@ -274,15 +282,7 @@
             improves robustness.
           </p>
           <p>
-            We show that <span class="dnerf">Nerfies</span> can turn casually captured selfie
-            photos/videos into deformable NeRF
-            models that allow for photorealistic renderings of the subject from arbitrary
-            viewpoints, which we dub <i>"nerfies"</i>. We evaluate our method by collecting data
-            using a
-            rig with two mobile phones that take time-synchronized photos, yielding train/validation
-            images of the same pose at different viewpoints. We show that our method faithfully
-            reconstructs non-rigidly deforming scenes and reproduces unseen views with high
-            fidelity.
+            We show that <span class="dnerf">KINETC</span> can enable advanced control from data-driven models, allowing for precise and efficient event-triggered control strategies. We evaluate our method by conducting extensive simulations and real-world experiments, demonstrating its effectiveness in various scenarios.
           </p>
         </div>
       </div>
@@ -314,8 +314,7 @@
         <div class="content">
           <h2 class="title is-3">Visual Effects</h2>
           <p>
-            Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
-            would be impossible without nerfies since it would require going through a wall.
+            Using <i>KINETC</i>, you can create sophisticated visual control effects. This demonstrates the potential of data-driven control strategies in complex environments.
           </p>
           <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/dollyzoom-stacked.mp4"
@@ -388,7 +387,7 @@
         <h3 class="title is-4">Re-rendering the input video</h3>
         <div class="content has-text-justified">
           <p>
-            Using <span class="dnerf">Nerfies</span>, you can re-render a video from a novel
+            Using <span class="dnerf">KINETC</span>, you can re-render a video from a novel
             viewpoint such as a stabilized camera by playing back the training deformations.
           </p>
         </div>
@@ -410,7 +409,7 @@
     <!--/ Animation. -->
 
 
-    <!-- Concurrent Work. -->
+    <!-- Related Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Related Links</h2>
@@ -435,7 +434,7 @@
         </div>
       </div>
     </div>
-    <!--/ Concurrent Work. -->
+    <!--/ Related Work. -->
 
   </div>
 </section>
@@ -444,11 +443,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+    <pre><code>@article{manaa2024kinetc,
+  author    = {Manaa, Zeyad M. and Abdallah, Ayman M. and El-Ferik, Sami},
+  title     = {KINETC: Koopman-Inspired Nonlinear Event-Triggered Control from Data},
+  journal   = {IEEE Transactions on Control Systems Technology},
+  year      = {2024},
 }</code></pre>
   </div>
 </section>
@@ -458,10 +457,10 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="./static/videos/nerfies_paper.pdf">
+         href="./static/videos/kinetc_paper.pdf">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/yourusername" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
