--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             New Airfoil ussing Convex Optimization
           </a>
           <a class="navbar-item" href="https://arxiv.org/pdf/2409.18741">
-            Optimum Configuration for
+            Optimum Configuration for Quadrotor Swarm
           </a>
         </div>
       </div>
@@ -92,26 +92,25 @@
           <div class="is-size-5 publication-authors">
             <!-- Updated Author Names -->
             <span class="author-block">
-              Zeyad M. Manaa
+              <a href="https://zmanaa.github.io/">Zeyad M. Manaa</a><sup>1</sup>,</span>
             </span>,
             <span class="author-block">
-              Ayman M. Abdallah
+              <a href="https://zmanaa.github.io/">Ayman M. Abdallah</a><sup>1</sup>,</span>
             </span>,
             <span class="author-block">
-              Sami El-Ferik
+              <a href="https://cie.kfupm.edu.sa/people/faculty/dr-sami-el-ferik/">Sami El-Ferik</a><sup>1</sup>,</span> 
             </span>
+          </div>
+
+          <div class="is-size-5 publication-authors">
+            <span class="author-block"><sup>1</sup>IRC-ASE, and the AE Department, KFUPM, 31261, Saudi Arabia.</span>
+            <span class="author-block"><sup>2</sup>IRC for Smart Mobility and Logistics, and the CIE Department, KFUPM, 31261, Saudi Arabia.</span>
           </div>
 
           <!-- Acknowledgments -->
           <div class="is-size-6 publication-acknowledgments">
             <p>
-              This work was supported by the Interdisciplinary Research Center for Aviation and Space Exploration (IRC-ASE) at King Fahd University of Petroleum and Minerals under research project/grant INAE2401.
-            </p>
-            <p>
-              Z. M. Manaa and A. M. Abdallah are with the Interdisciplinary Research Center for Aviation and Space Exploration (IRC-ASE) and the Department of Aerospace Engineering at King Fahd University for Petroleum and Minerals, Dhahran, 31261, Saudi Arabia.
-            </p>
-            <p>
-              S. El-Ferik is with the Research Center for Smart Mobility and Logistics, and the Control and Instrumentation Engineering Department, King Fahd University of Petroleum & Minerals Dhahran, 31261, Saudi Arabia.
+              This work was supported by the IRC-ASE at KFUPM under research project/grant INAE2401.
             </p>
           </div>
 
