--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             <!-- Updated Author Names -->
             <span class="author-block">
               <a href="https://zmanaa.github.io/">Zeyad M. Manaa</a><sup>1</sup>,</span>
-            </span>,
+            </span>
             <span class="author-block">
               <a href="https://zmanaa.github.io/">Ayman M. Abdallah</a><sup>1</sup>,</span>
-            </span>,
+            </span>
             <span class="author-block">
               <a href="https://cie.kfupm.edu.sa/people/faculty/dr-sami-el-ferik/">Sami El-Ferik</a><sup>1</sup>,</span> 
             </span>
@@ -136,7 +136,7 @@
                 </a>
               </span>
               <!-- Video Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -145,6 +145,8 @@
                   <span>Video</span>
                 </a>
               </span>
+              -->
+              
               <!-- Code Link Placeholder -->
               <span class="link-block">
                 <!--
@@ -165,6 +167,7 @@
                 </a>
               </span>
               <!-- Dataset Link. -->
+              <!--
               <span class="link-block">
                 <a href="https://github.com/google/nerfies/releases/tag/0.1"
                    class="external-link button is-normal is-rounded is-dark">
@@ -175,7 +178,8 @@
                 </a>
               </span>
             </div>
-
+              -->
+              
           </div>
         </div>
       </div>
