--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             Koopman-LQR for Quadrotors
           </a>
           <a class="navbar-item" href="https://www.emerald.com/insight/content/doi/10.1108/HFF-06-2024-0433/full/html">
-            New Airfoil ussing Convex Optimization
+            New Airfoil using Convex Optimization Approach
           </a>
           <a class="navbar-item" href="https://arxiv.org/pdf/2409.18741">
             Optimum Configuration for Quadrotor Swarm
