--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
 
 
 <div class="content has-text-justified">
+  <h2 class="title is-3">Related work</h2>
   <p>
     There is a substantial body of work related to event-triggered control and data-driven methods, upon which our approach builds.
   </p>
