--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <a href="https://zmanaa.github.io/">Zeyad M. Manaa</a><sup>1</sup>,</span>
             </span>
             <span class="author-block">
-              <a href="https://zmanaa.github.io/">Ayman M. Abdallah</a><sup>1</sup>,</span>
+              Ayman M. Abdallah<sup>1</sup>,</span>
             </span>
             <span class="author-block">
               <a href="https://cie.kfupm.edu.sa/people/faculty/dr-sami-el-ferik/">Sami El-Ferik</a><sup>2</sup>,</span> 
@@ -117,7 +117,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <span class="link-block">
+<!--               <span class="link-block">
                 <a href="https://arxiv.org/pdf/2011.12948"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -125,7 +125,7 @@
                   </span>
                   <span>Paper</span>
                 </a>
-              </span>
+              </span> -->
               <span class="link-block">
                 <a href="https://arxiv.org/abs/2011.12948"
                    class="external-link button is-normal is-rounded is-dark">
