--- a/index.html
+++ b/index.html
@@ -8,20 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>KINETC: Koopman-Inspired Nonlinear Event-Triggered Control from Data</title>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!--   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-
-    gtag('js', new Date());
-
-    gtag('config', 'G-PYVRSFMDRL');
-  </script> -->
-
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
 
@@ -95,7 +81,7 @@
               <a href="https://zmanaa.github.io/">Zeyad M. Manaa</a><sup>1</sup>,</span>
             </span>
             <span class="author-block">
-              Ayman M. Abdallah<sup>1</sup>,</span>
+              <a  href="https://pure.kfupm.edu.sa/en/persons/ayman-abdallah">Ayman M. Abdallah</a><sup>1</sup>,</span>
             </span>
             <span class="author-block">
               <a href="https://cie.kfupm.edu.sa/people/faculty/dr-sami-el-ferik/">Sami El-Ferik</a><sup>2</sup>,</span> 
