--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="KINETC: Koopman-Inspired Nonlinear Event-Triggered Control from Data">
+        content="KOETC: Koopman Operator-Based  Event-Triggered Control from Data">
   <meta name="keywords" content="Koopman operator, event-triggered control, lifting linear predictors, data-driven control.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>KINETC: Koopman-Inspired Nonlinear Event-Triggered Control from Data</title>
+  <title>KOETC: Koopman Operator-Based  Event-Triggered Control from Data</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -74,7 +74,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">KINETC: Koopman-Inspired Nonlinear Event-Triggered Control from Data</h1>
+          <h1 class="title is-1 publication-title">KOETC: Koopman Operator-Based  Event-Triggered Control from Data</h1>
           <div class="is-size-5 publication-authors">
             <!-- Updated Author Names -->
             <span class="author-block">
@@ -104,7 +104,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="./static/files/kinetc_paper.pdf"
+                <a href="./static/files/KOETC_paper.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -176,9 +176,9 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img id="teaser" src="./static/images/all_results.png" alt="KINETC Image" height="100%">
+      <img id="teaser" src="./static/images/all_results.png" alt="KOETC Image" height="100%">
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">KINETC</span> enables advanced control from data-driven models.
+        <span class="dnerf">KOETC</span> enables advanced control from data-driven models.
       </h2>
     </div>
   </div>
@@ -207,11 +207,11 @@
             By leveraging Koopman operator theory,
             the nonlinear system dynamics are globally linearized (approximately in practical settings)
             in a higher-dimensional space. We design a state-feedback controller and an event-triggering
-            policy directly from data, ensuring exponential stability in Lyapunov sense. The proposed KINETC
+            policy directly from data, ensuring exponential stability in Lyapunov sense. The proposed KOETC
             method is validated through extensive simulation experiments, demonstrating significant resource savings.
           </p>
           <p>
-            We show that <span class="dnerf">KINETC</span> can enable advanced control from data-driven models, allowing for precise and efficient event-triggered control strategies. We evaluate our method by conducting extensive simulations and real-world experiments, demonstrating its effectiveness in various scenarios.
+            We show that <span class="dnerf">KOETC</span> can enable advanced control from data-driven models, allowing for precise and efficient event-triggered control strategies. We evaluate our method by conducting extensive simulations and real-world experiments, demonstrating its effectiveness in various scenarios.
           </p>
         </div>
       </div>
@@ -252,9 +252,9 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{manaa2024kinetc,
+    <pre><code>@article{manaa2024KOETC,
   author    = {Manaa, Zeyad M. and Abdallah, Ayman M. and El-Ferik, Sami},
-  title     = {KINETC: Koopman-Inspired Nonlinear Event-Triggered Control from Data},
+  title     = {KOETC: Koopman Operator-Based  Event-Triggered Control from Data},
   journal   = {holder},
   year      = {2024},
 }</code></pre>
@@ -266,7 +266,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="./static/files/kinetc_paper.pdf">
+         href="./static/files/KOETC_paper.pdf">
         <i class="fas fa-file-pdf"></i>
       </a>
       <a class="icon-link" href="https://github.com/zmanaa" class="external-link" disabled>
