--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
               <a  href="https://pure.kfupm.edu.sa/en/persons/ayman-abdallah">Ayman M. Abdallah</a><sup>1</sup>,</span>
             </span>
             <span class="author-block">
+              <a  href="https://pure.kfupm.edu.sa/en/persons/mohamed-ismail">Mohamed Ismail</a><sup>1</sup>,</span>
+            </span>
+            <span class="author-block">
               <a href="https://cie.kfupm.edu.sa/people/faculty/dr-sami-el-ferik/">Sami El-Ferik</a><sup>2</sup>,</span> 
             </span>
           </div>
@@ -253,9 +256,9 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{manaa2024KOETC,
-  author    = {Manaa, Zeyad M. and Abdallah, Ayman M. and El-Ferik, Sami},
+  author    = {Manaa, Zeyad M. and Abdallah, Ayman M. and Ismail, Mohamed and El-Ferik, Sami},
   title     = {KOETC: Koopman Operator-Based  Event-Triggered Control from Data},
-  journal   = {holder},
+  journal   = {Submitted to Results in Engineering},
   year      = {2024},
 }</code></pre>
   </div>
