--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="./static/files/_els____Manuscript___KOETC__Koopman_Operator_Based__Event_Triggered_Control_from_Data.pdf"
+                <a href="/static/files/_els____Manuscript___KOETC__Koopman_Operator_Based__Event_Triggered_Control_from_Data.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
