--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <pre><code>@article{manaa2024KOETC,
   author    = {Manaa, Zeyad M. and Abdallah, Ayman M. and Ismail, Mohamed and El-Ferik, Sami},
   title     = {KOETC: Koopman Operator-Based  Event-Triggered Control from Data},
-  journal   = {Submitted to Results in Engineering},
+  journal   = {Submitted to European Journal of Control},
   year      = {2024},
 }</code></pre>
   </div>
